cmake_minimum_required(VERSION 3.0)
project(UDP_PLOT)
add_executable(udpPlot udpPlotApp.cpp udpPlotWindow.cpp udpPlotMain.cpp ConfigDialog.cpp)
add_executable(testUdpPlot testUdpPlot.cpp)
find_package(wxWidgets REQUIRED core base)
target_link_libraries(udpPlot ${wxWidgets_LIBRARIES})
target_link_libraries(udpPlot /usr/lib/codeblocks/wxContribItems/libwxmathplot.so)
target_link_libraries(udpPlot jsoncpp)
include_directories(/usr/include/codeblocks/wxContribItems/wxMathPlot)
include(${wxWidgets_USE_FILE})
