cmake_minimum_required(VERSION 3.0)
project(udpPlot)
add_executable(udpPlot udpPlotApp.cpp udpPlotWindow.cpp udpPlotMain.cpp ConfigDialog.cpp)
add_executable(testUdpPlot testUdpPlot.cpp)
find_package(wxWidgets REQUIRED core base)
target_link_libraries(udpPlot ${wxWidgets_LIBRARIES})
#target_link_libraries(udpPlot /usr/lib/codeblocks/wxContribItems/libwxmathplot.so)
target_link_libraries(udpPlot mathplot)
target_link_libraries(udpPlot jsoncpp)
include_directories(/usr/include/codeblocks/wxContribItems/wxMathPlot)
include(${wxWidgets_USE_FILE})

INSTALL(TARGETS udpPlot RUNTIME DESTINATION bin COMPONENT Applications)
SET(CPACK_PACKAGE_DESCRIPTION "udpPlot")
SET(CPACK_PACKAGE_CONTACT "Cedric Boudinet")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libwxmathplot")
include(CPack)
